# npusearch

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
src/: client.rs  config.rs  embed.rs  index.rs  interactive.rs  main.rs  search.rs  walker.rs
