[package]
name = "npusearch"
version = "0.1.0"
edition = "2021"
description = "Semantic file search powered by local NPU"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
toml = "0.8"
dirs = "5"
walkdir = "2"
crossterm = "0.28"
clap_complete = "4"
